# HPCA2

./: CMakeLists.txt  Exercise1.c  Exercise3.c
Ex2/: script1.sh  script3.sh  stream.c  stream_dynamic.c  stream_static.c
Ex2/ResThreadQ1/: res.xlsx  res1.txt  res12.txt  res16.txt  res2.txt  res20.txt  res24.txt  res28.txt  res32.txt  res4.txt  res8.txt  ~$res.xlsx
Ex2/resQ3/: res3.xlsx  res32_dynamic.txt  res32_guided.txt  res32_static.txt
Ex2/resQ3.2/: res3.xlsx  res32_dynamic.txt  res32_guided.txt  res32_static.txt
Ex3/: Exercise3.c  script.sh
Ex3/res/: res.old.xlsx  res1.txt  res16.txt  res2.txt  res20.txt  res24.txt  res28.txt  res32.txt  res4.txt  res8.txt  resNI.xlsx
Ex4/: DFTW_parallel.c  DFTW_serial.c  parallel_script.sh  res_parallel.txt  res_serial.txt  serial_script.sh
Ex5/: parallel.c  parallel_1000.c  parallel_500.c  parallel_red.c  parallel_schedule.c  parallel_script.sh  plotNbodies.xlsx  red_script.sh  serial.c  serial_1000.c  serial_2000.c  serial_500.c  serial_script.sh
Ex5/res-parallel/: 500B.xlsx  res-parallel_1000-T16.txt  res-parallel_1000-T24.txt  res-parallel_1000-T4.txt  res-parallel_500-T4.txt  res-parallel_500-T8.txt
Ex5/res-parallel/first/: res-parallel_1000-T1.txt  res-parallel_1000-T12.txt  res-parallel_1000-T32.txt  res-parallel_1000-T8.txt  res-parallel_500-T1.txt  res-parallel_500-T12.txt  res-parallel_500-T16.txt  res-parallel_500-T24.txt  res-parallel_500-T32.txt
Ex5/res-parallel/second/: res-parallel_1000-T1.txt  res-parallel_1000-T12.txt  (+17 more)
Ex5/res-serial/: res-serial_1000.txt  res-serial_2000.txt  res-serial_500.txt
